--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,7 @@ body {
 	background-repeat: no-repeat;
 	background-size: 100% 40%;
 	padding-top: 12vh;
+	transition: all 0.7s;
 }
 .container{
 	margin:0 auto;
